refactor: ♻️ 重构部分特性代码以兼容至 Java 8
- 将 Java 11+ 原生的 `java.net.http.HttpClient` 替换为 `OkHttpClient`，以满足 Java 8 环境的兼容性需求。
- 调整 `hiagent-api`、`hiagent-eva` 和 `hibot` 等模块的网络请求逻辑，使用 OkHttp 的机制实现同步与异步请求。
- 更新项目根目录及子模块的 `pom.xml`，将 `<java.version>` 编译配置从 11 降级为 1.8。
- 更新 `README.md` 文档及相关测试代码，以匹配新的 OkHttp 客户端实现。